# sentinel-guard

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.cargo/: config.toml
src/: main.rs
src/core/: config.rs  db.rs  types.rs
src/detect/: honeypot.rs  integrity.rs  mod.rs  scanner.rs  secrets.rs  skills.rs  vault.rs
src/monitor/: agents.rs  hooks.rs  mod.rs  rules.rs  watcher.rs
src/output/: alerts.rs  dashboard.rs  launcher.rs  mod.rs  notifier.rs  report.rs  webhook.rs
